--- a/main.html
+++ b/main.html
@@ -8,7 +8,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
+    <table>
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Games Played</th>
+                <th>Goals Scored</th>
+                <th>Assists</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Messi</td>
+                <td>50</td>
+                <td>45</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <td>Ronaldo</td>
+                <td>48</td>
+                <td>40</td>
+                <td>15</td>
+            </tr>
+            <tr>
+                <td>Neymar</td>
+                <td>45</td>
+                <td>30</td>
+                <td>25</td>
+            </tr>
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 
         
 </body>
